# PRISM

./: .gitignore  CMakeLists.txt  Encoder.cpp  LICENSE  README.md  image_processor.cpp  main.cpp
entropy/: ANSCoder.cpp  RLE.cpp
pipeline/: Ditherer.cpp  ImageAdjuster.cpp  MotionEstimator.cpp  PaletteBuilder.cpp  PaletteMapper.cpp  Quantizer.cpp  SceneSplitter.cpp  SpatialPredictor.cpp
types/: ColorUtils.h  DataTypes.cpp  DataTypes.h
